@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.751 2006-04-19 16:56:17 castaglia Exp $
+$Id: NEWS,v 1.752 2006-04-20 17:03:32 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -40,6 +40,8 @@ CVS
   new configure option, --enable-openssl, which is honored by mod_ldap
   and mod_sql.  This configure option can be used instead of using
   the HAVE_OPENSSL CFLAGS variable, although HAVE_OPENSSL will still work.
+- Bug 2733 - IP TOS not being set for data transfers.  Other socket-level
+  options were not being properly honored for data transfers, too.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
